--- a/SiriShortcuts/Resources/Info.plist
+++ b/SiriShortcuts/Resources/Info.plist
@@ -25,6 +25,7 @@
 	<key>NSUserActivityTypes</key>
 	<array>
 		<string>OrderSoupIntent</string>
+		<string>com.ljb.SiriShortcuts.viewMenu</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
