--- a/SiriShortcutsIntentsUI/SiriShortcutsIntentsUI.entitlements
+++ b/SiriShortcutsIntentsUI/SiriShortcutsIntentsUI.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.lijiangbo.LEERandom</string>
+		<string>group.com.li.sirigroup</string>
 	</array>
 </dict>
 </plist>
